@@ -18,6 +18,20 @@ tasks.withType<BootJar> {
 
 tasks.withType<JavaCompile> {
 //    options.compilerArgs = listOf("-Xlint:unchecked", "-verbose", "-XprintRounds", "-Xmaxerrs", "100000", "-Akey=name")
+//    options.compilerArgs =
+//        listOf(
+////            "-Djps.track.ap.dependencies=false",
+//            "--add-exports",
+//            "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+//            "--add-exports",
+//            "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+//            "--add-exports",
+//            "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+//            "--add-exports",
+//            "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+//            "--add-exports",
+//            "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
+//        )
 }
 
 //dependencyManagement {
@@ -32,7 +46,6 @@ dependencies {
     implementation(project(":wlxx-services:wlxx-system:wlxx-system-client"))
     implementation(project(":wlxx-framework:wlxx-common"))
     implementation(project(":wlxx-framework:wlxx-web"))
-//    annotationProcessor(project(":wlxx-framework:wlxx-apt"))
     testCompileOnly("org.projectlombok:lombok")
     testAnnotationProcessor("org.projectlombok:lombok")
 //    implementation("com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config")
